--- a/informe.Rmd
+++ b/informe.Rmd
@@ -20,7 +20,7 @@ Iniciamos cargando el archivo que contiene las varibles a utilizar, el paquete _
 leer archivos desde excel sin la necesidad de instalar complementos.
 
 ```{r,echo=TRUE,eval=TRUE}
-options(warn=-1)
+options(warn=-1) ## hace q no aparezca los warings
 library(readxl)
 data <- read_excel("data_rls_uti.xlsx",sheet=1,na="")
 str(data)
@@ -66,9 +66,13 @@ __Interpretación $R^2$:__ _El modelo de regresión lineal obtenido explica el `
 
 ### Pruebas de hipótesis
 
-__Ejercicio lector__
+$$H_0: \beta_2 =0$$
+$$H_1: \beta_2 \neq 0$$
 
-
+Se sabe que  $t= `r summary(reg)$coefficients[2,3]`$ es `r tex<-"menor"; if(summary(reg)$coefficients[2,3]>qt(0.975 , df =nrow(data)-2)) tex<-"mayor"; tex` que 
+$t_{`r (nrow(data)-2)`}(\frac{\alpha}{2})= `r qt(0.975 , df =nrow(data)-2)`$
+`r tex<-"se rechaza"; if(summary(reg)$coefficients[1,3]>qt(0.975 , df =nrow(data)-2)) tex<-"no se rechaza"; tex`
+$H_0: \beta_2=0$.
 
 ### Análisis de varianza
 
